--- a/client/musicboxd/src/index.css
+++ b/client/musicboxd/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  padding: 0, 1rem;
+}
+
+nav a{
+  text-decoration: none;
+  color: black;
+  padding: 2% 0;
+}
+
+nav a:hover{
+  color: black;
+}
